welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:1: error: Missing closing brace `}' assumed here
def dogHouse() {
^MethodsDogHouse:4: error: Missing closing brace `}' assumed here
	}
        ^